changed demo message

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ $(document).ready(function(){
 </script>
 
 <div id="rotate">
-	<div class="rotate"><h1>div.rotate 1</h1></div>
-	<div class="rotate"><h1>div.rotate 2</h1></div>
-	<div class="rotate"><h1>div.rotate 3</h1></div>
-	<div class="rotate"><h1>div.rotate 4</h1></div>
+	<div class="rotate"><h1>Welcome, robot</h1></div>
+	<div class="rotate"><h1>continue working off your debt to society</h1></div>
+	<div class="rotate"><h1>somebody you'll be free</h1></div>
+	<div class="rotate"><h1>just not today.</h1></div>
 </div>
 
 </body>
