Fixed a typo ('somebody' -> 'someday')

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ $(document).ready(function(){
 <div id="rotate">
 	<div class="rotate"><h1>Welcome, robot</h1></div>
 	<div class="rotate"><h1>continue working off your debt to society</h1></div>
-	<div class="rotate"><h1>somebody you'll be free</h1></div>
+	<div class="rotate"><h1>someday you'll be free</h1></div>
 	<div class="rotate"><h1>just not today.</h1></div>
 </div>
 
